--- a/LittleLemonDB.ipynb
+++ b/LittleLemonDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c6617bc0-17c6-4609-8e0b-d61727cf6676",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     "try:\n",
     "    connection = connector.connect(\n",
     "        user=\"root\",\n",
-    "        password=\"Scimitar1!\",\n",
+    "        password=\"\",\n",
     "        database=\"littlelemondb\"\n",
     "    )\n",
     "    if connection.is_connected():\n",
